<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#4a7dd85e">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_RMNP"
            android:id="@+id/button_RMNP"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_hotsprings"
            android:id="@+id/button_hotsprings"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_roosevelt"
            android:id="@+id/button_roosevelt"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_craterlake"
            android:id="@+id/button_craterlake"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_windcave"
            android:id="@+id/button_windcave"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_bigbend"
            android:id="@+id/button_bigbend"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_shenandoah"
            android:id="@+id/button_shenandoah"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_arches"
            android:id="@+id/button_arches"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_rainier"
            android:id="@+id/button_rainier"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_smokymountains"
            android:id="@+id/button_smokymountains"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_joshuatree"
            android:id="@+id/button_joshuatree"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_glacier"
            android:id="@+id/button_glacier"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_mesaverde"
            android:id="@+id/button_mesaverde"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_olympic"
            android:id="@+id/button_olympic"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_petrifiedforest"
            android:id="@+id/button_petrifiedforest"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_acadia"
            android:id="@+id/button_acadia"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_sequoia"
            android:id="@+id/button_sequoia"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_zion"
            android:id="@+id/button_zion"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_everglades"
            android:id="@+id/button_everglades"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_deathvalley"
            android:id="@+id/button_deathvalley"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_denali"
            android:id="@+id/button_denali"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_yosemite"
            android:id="@+id/button_yosemite"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_grandcanyon"
            android:id="@+id/button_grandcanyon"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_hawaii"
            android:id="@+id/button_hawaii"
            android:onClick="goToOptions"
            android:background="#93ef91" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/button_yellowstone"
            android:id="@+id/button_yellowstone"
            android:onClick="goToOptions"
            android:background="#93ef91" />
    </LinearLayout>

</ScrollView>
